@@ -3,3 +3,7 @@
 * The initial release of the NxWidgets package
 
 1.1 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+* Updated and verified the NxWidgets DOxygen documentation.  Contributed
+  by Jose Pablo Carballo.
+
